tests/baselines/reference/recursiveBaseConstructorCreation3.errors.txt
tests/cases/compiler/recursiveBaseConstructorCreation3.ts(6,27): error TS2314: Generic type 'abc<T>' requires 1 type argument(s).
tests/cases/compiler/recursiveBaseConstructorCreation3.ts(9,11): error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.


==== tests/cases/compiler/recursiveBaseConstructorCreation3.ts (2 errors) ====
    declare class base<T> {
    }
    declare class abc<T> extends base<T> {
        foo: xyz;
    }
    declare class xyz extends abc {
                              ~~~
!!! error TS2314: Generic type 'abc<T>' requires 1 type argument(s).
    }
    
    var bar = new xyz(); // Error: Invalid 'new' expression.
              ~~~~~~~~~
!!! error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
    var r: xyz = bar.foo;